# moonlight-web-stream-tsla

./: .gitignore  Cargo.toml  README.md  acme-certificate.ps1  acme-certificate.sh  buildAll.ps1  setup.ps1
.github/workflows/: release.yml
docker/: default-config.json
memory-bank/: upstream-sync-memo.md
moonlight-common/src/: high.rs
moonlight-common/src/network/: request_client.rs  reqwest.rs
moonlight-web/common/src/: api_bindings.rs  config.rs  ipc.rs
moonlight-web/streamer/src/: audio.rs  buffer.rs  connection.rs  main.rs  sender.rs  video.rs
moonlight-web/streamer/src/video/h264/: payloader.rs
moonlight-web/streamer/src/video/h265/: reader.rs
moonlight-web/web-server/: Cargo.toml  build.rs  package.json
moonlight-web/web-server/src/: acme.rs  data.rs  main.rs  tray.rs  web.rs
moonlight-web/web-server/src/api/: auth.rs  mod.rs  stream.rs
moonlight-web/web-server/web/: api.ts  iframe.ts  index.ts  input.html  input.ts  ios_right_click.ts  screen_keyboard.ts  stream.ts  styles.css
moonlight-web/web-server/web/component/: context_menu.ts  list.ts  settings_menu.ts  stream_stats.ts
moonlight-web/web-server/web/component/game/: index.ts
moonlight-web/web-server/web/component/host/: list.ts
moonlight-web/web-server/web/component/modal/: index.ts
moonlight-web/web-server/web/polyfill/: abort_controller.ts  index.ts
moonlight-web/web-server/web/stream/: audio_decode_worker.ts  audio_playback_worklet.js  buffer.ts  canvas.ts  gamepad.ts  index.ts  input.ts  input_stream.ts  keyboard.ts  ogg_demux.ts  video.ts  video_render_worker.ts
